layout bug fix

--- a/src/app/presentation/presentation.component.css
+++ b/src/app/presentation/presentation.component.css
@@ -1,7 +1,8 @@
 #presentationBck{
     background-color: #a6c280;
     position: absolute;
-    top: max(100vh, 1200px);
+    top: 100vh;
+    width: max(100vw, 1200px);
     left: 0;
 }
 #myProjects{
